--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-use": "^17.3.1",
     "react-webcam": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
