--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.4",
+    "@mui/styled-engine-sc": "^5.0.3",
     "@tensorflow-models/posenet": "^2.2.2",
     "@tensorflow/tfjs": "^3.3.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -16,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
     "react-webcam": "^6.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
